--- a/client/src/app/login-register/login/login.component.scss
+++ b/client/src/app/login-register/login/login.component.scss
@@ -14,9 +14,11 @@
 }
 
 .red-text {
+    display: block;
     color: red;
+    visibility: visible;
 }
 
 .d-none {
-    display: none;
+    visibility: hidden;
 }
